--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,8 @@
   "builds": [
     {
       "src": "package.json",
-      "use": "vercel-sapper"
+      "use": "vercel-sapper@rc",
+      "config": { "include": ["static"] }
     }
   ]
 }
