--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,10 @@
   "builds": [
     {
       "src": "package.json",
-      "use": "vercel-sapper@rc",
-      "config": { "include": ["static"] }
+      "use": "vercel-sapper",
+      "config": {
+        "include": ["articles"]
+      }
     }
   ]
 }
