--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "type": "module",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jdkfx/blog.git"
+    "url": "https://github.com/jdkfx/jdkfx.com.git"
   },
   "scripts": {
     "dev": "svelte-kit dev",
-    "build": "svelte-kit build"
+    "build": "svelte-kit build",
+    "preview": "svelte-kit preview"
   },
   "dependencies": {
     "path": "^0.12.7"
