--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
-    "preview": "svelte-kit preview"
+    "preview": "svelte-kit preview",
+    "adapt": "svelte-kit adapt"
   },
   "dependencies": {
     "path": "^0.12.7"
@@ -27,7 +28,7 @@
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-replace": "^2.4.2",
     "@rollup/plugin-url": "^5.0.0",
-    "@sveltejs/adapter-vercel": "^1.0.0-next.34",
+    "@sveltejs/adapter-static": "^1.0.0-next.24",
     "@sveltejs/kit": "^1.0.0-next.212",
     "front-matter": "^4.0.2",
     "highlight.js": "^10.7.3",
